ISPN-9100 Provided dependency on javax.annotation-api
- This module was removed in JDK11