@@ -63,7 +63,6 @@
                     --add-opens=java.base/java.time=ALL-UNNAMED
                     --add-opens=java.base/java.nio=ALL-UNNAMED
                     --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED
-                    --add-modules=java.xml.bind
                     --add-exports=java.security.sasl/com.sun.security.sasl=ALL-UNNAMED
                     --add-opens=java.base/java.text=ALL-UNNAMED
                     --add-opens=java.desktop/java.awt.font=ALL-UNNAMED
